--- a/examples/state.yaml
+++ b/examples/state.yaml
@@ -1,11 +1,11 @@
 program_state:
 
-  variable_1:
+  var1:
     range: [7, 0]
     description: >
         What is variable_1 used for?
 
-  variable_2:
+  var2:
     description: >
         What is variable_2 used for?
 
