--- a/examples/fibonacci/fibonacci-state.yaml
+++ b/examples/fibonacci/fibonacci-state.yaml
@@ -1,8 +1,14 @@
 
+#
+# Fibonacci Numbers:
+# 
+# 0,1,1,2,3,5,8,13,21,34,55
+#
+
 program_state:
   
   counter:
-    range: [5,0]
+    range: [7,0]
     description: count which number in the sequence we are upto.
 
   num_a:
