Update mkdocs config and use readthedocs  On branch master  Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
	modified:   README.md
	modified:   docs/README.md
	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,10 @@
 site_name: uCode
 
+site_author: Ben Marshall
+
 theme: readthedocs
+
+repo_name: https://github.com/ben-marshall/microcoder
 
 markdown_extensions:
 - smarty
