Updating documentation and adding Usage information.  On branch master  Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
	modified:   README.md
	modified:   docs/README.md
	modified:   docs/programs-instructions.md
	new file:   docs/usage.md
	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,7 @@ markdown_extensions:
 
 pages:
 - Overview: README.md
+- Usage: usage.md
 - Programs: 
   - Overview: programs.md
   - Ports: programs-ports.md
