Add a step-by-step guide for the DMA example.  On branch master  Your branch is ahead of 'origin/master' by 2 commits.    (use "git push" to publish your local commits)
 Changes to be committed:
	new file:   docs/example-dma.md
	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -21,3 +21,4 @@ pages:
   - Instructions: programs-instructions.md
   - Writing Programs: programs-writing.md
 - Architecture: architecture.md
+- Example - DMA: example-dma.md
