Update todo list.  On branch master  Your branch is up-to-date with 'origin/master'.
 Changes to be committed:
	modified:   docs/todo.md
	modified:   mkdocs.yml

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,3 +22,5 @@ pages:
   - Writing Programs: programs-writing.md
 - Architecture: architecture.md
 - Example - DMA: example-dma.md
+- Todo List: todo.md
+
